Removed shell files